kronos-server runs now