@@ -15,6 +15,9 @@ tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         jvmTarget = "11" // Match the Java version above
     }
+    run {
+        jvmArgs = ['-Djdk.attach.allowAttachSelf=true']
+    }
 }
 
 apply plugin: 'application'
@@ -27,6 +30,8 @@ compileKotlin {
 
 dependencies {
     implementation project(':kronos-api')
+    implementation 'com.google.api-client:google-api-client:1.33.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation group: 'com.typesafe', name: 'config', version:'1.3.1'
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.5.1'
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.12.2'
